syntax = "proto3";

service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
}

message GetBookRequest {
  string name = 1;
}

message GetBookResponse {
  Book book = 1;
}

message Book {
  string name = 1;
  int32 shelf = 2;
}
